# fantasy-sandbox

./: .gitignore  README.md
assets/maps/: temp.json  temp2.json
assets/tilesets/: TilesetFloor.tsx  TilesetFloorDetail.tsx  TilesetNature.tsx  field.tsx
docs/dev_Q&A/: 01.md  02.md  03.md
docs/dev_logs/: phase_1_genesis.md  phase_2_descent.md
engine/: CMakeLists.txt
engine/include/core/: CommandQueue.h  EventBus.h  Logger.h  Pathfinder.h  World.h
engine/include/entities/: BaseEntity.h  Entity.h  EntityFactory.h
engine/include/entities/policies/: BiomeWanderPolicy.h  IPolicy.h  RandomWalkPolicy.h  ReturnHomePolicy.h
engine/include/events/: GameEvents.h
engine/src/: main.cpp
engine/src/core/: Pathfinder.cpp  World.cpp
frontend/: index.html
frontend/src/: renderer.js
server/: index.js
